// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table renders a table with resizable columns 1`] = `
Array [
  .emotion-40 {
  font-weight: normal;
}

.emotion-40::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-39 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-32 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-32::-webkit-scrollbar {
  display: none;
}

.emotion-3 {
  cursor: col-resize;
  height: 100%;
  visibility: hidden;
}

.emotion-3:hover .staticClass_dragHandleWrapper,
.emotion-3:active .staticClass_dragHandleWrapper {
  background-color: var(--themeBgHover,#F7F8F9);
}

.emotion-29 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-29::-webkit-scrollbar {
  display: none;
}

.emotion-29 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-7 {
  overflow: unset !important;
}

.emotion-7 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-6 {
  box-sizing: border-box;
  border-top: 1px solid var(--themeBorderHeavy,#1B2029);
  border-bottom: 1px solid var(--themeBorderHeavy,#1B2029);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-6:hover .staticClass_dragHandleWrapper,
.emotion-6:active .staticClass_dragHandleWrapper {
  visibility: visible;
}

.emotion-5 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  mix-blend-mode: multiply;
  position: relative;
  z-index: 1;
}

.emotion-30 {
  box-sizing: border-box;
  border-bottom: 1px solid var(--themeBorder,#DADDE2);
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-2 {
  background-clip: content-box;
  height: 100%;
  position: absolute;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: 24px;
}

.emotion-1 {
  vertical-align: middle;
  fill: #76797E;
}

.emotion-1 use {
  pointer-events: none;
}

<div
    class="emotion-40"
    style="overflow:visible;height:0;width:0"
  >
    <div
      style="height:768px;overflow:visible;width:1024px"
    >
      <div
        style="height:35px;position:relative;width:1024px"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-7"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:307.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:0;top:0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:307.2px;height:35px;max-width:307.2px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-6"
              style="height:35px;left:0;position:absolute;top:0;width:307.2px"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-0"
                >
                  name
                </div>
                <div
                  class="emotion-4"
                >
                  <div
                    class="emotion-3"
                    style="touch-action:none;transform:translate(0px,0px)"
                  >
                    <div
                      class="staticClass_dragHandleWrapper emotion-2"
                    >
                      <svg
                        aria-label="system-resize-horizontal icon"
                        class="emotion-1"
                        height="12"
                        preserveAspectRatio="xMinYMin meet"
                        role="img"
                        viewBox="0 0 12 12"
                        width="12"
                      >
                        <use
                          href="#system-resize-horizontal"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="TopRightGrid_ScrollWrapper"
          style="left:307.2px;overflow-x:hidden;overflow-y:hidden;position:absolute;top:0;height:35px;width:716.8px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-29"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:716.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:0;top:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:1021.5999999999999px;height:35px;max-width:1021.5999999999999px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-6"
                style="height:35px;left:0;position:absolute;top:0;width:307.2px"
              >
                <div
                  class="emotion-5"
                >
                  <div
                    class="emotion-0"
                  >
                    role
                  </div>
                  <div
                    class="emotion-4"
                  >
                    <div
                      class="emotion-3"
                      style="touch-action:none;transform:translate(0px,0px)"
                    >
                      <div
                        class="staticClass_dragHandleWrapper emotion-2"
                      >
                        <svg
                          aria-label="system-resize-horizontal icon"
                          class="emotion-1"
                          height="12"
                          preserveAspectRatio="xMinYMin meet"
                          role="img"
                          viewBox="0 0 12 12"
                          width="12"
                        >
                          <use
                            href="#system-resize-horizontal"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-6"
                style="height:35px;left:307.2px;position:absolute;top:0;width:307.2px"
              >
                <div
                  class="emotion-5"
                >
                  <div
                    class="emotion-0"
                  >
                    state
                  </div>
                  <div
                    class="emotion-4"
                  >
                    <div
                      class="emotion-3"
                      style="touch-action:none;transform:translate(0px,0px)"
                    >
                      <div
                        class="staticClass_dragHandleWrapper emotion-2"
                      >
                        <svg
                          aria-label="system-resize-horizontal icon"
                          class="emotion-1"
                          height="12"
                          preserveAspectRatio="xMinYMin meet"
                          role="img"
                          viewBox="0 0 12 12"
                          width="12"
                        >
                          <use
                            href="#system-resize-horizontal"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-6"
                style="height:35px;left:614.4px;position:absolute;top:0;width:307.2px"
              >
                <div
                  class="emotion-5"
                >
                  <div
                    class="emotion-0"
                  >
                    zipcode
                  </div>
                  <div
                    class="emotion-4"
                  >
                    <div
                      class="emotion-3"
                      style="touch-action:none;transform:translate(0px,0px)"
                    >
                      <div
                        class="staticClass_dragHandleWrapper emotion-2"
                      >
                        <svg
                          aria-label="system-resize-horizontal icon"
                          class="emotion-1"
                          height="12"
                          preserveAspectRatio="xMinYMin meet"
                          role="img"
                          viewBox="0 0 12 12"
                          width="12"
                        >
                          <use
                            href="#system-resize-horizontal"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height:733px;overflow:visible;position:relative;width:1024px"
      >
        <div
          class="BottomLeftGrid_ScrollWrapper"
          style="left:0;overflow-x:hidden;overflow-y:hidden;position:absolute;height:733px;width:307.2px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-32"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:307.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto;left:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:307.2px;height:70px;max-width:307.2px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-30"
                data-rowindex="1"
                style="height:35px;left:0;position:absolute;top:0;width:307.2px"
              >
                <strong>
                  Brian Vaughn
                </strong>
              </div>
              <div
                class="emotion-30"
                data-rowindex="2"
                style="height:35px;left:0;position:absolute;top:35px;width:307.2px"
              >
                <strong>
                  Jon Doe
                </strong>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-39"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:716.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:307.2px"
          tabindex="0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:1021.5999999999999px;height:70px;max-width:1021.5999999999999px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-30"
              data-rowindex="1"
              style="height:35px;left:0;position:absolute;top:0;width:307.2px"
            >
              <em>
                Software Engineer
              </em>
            </div>
            <div
              class="emotion-30"
              data-rowindex="1"
              style="height:35px;left:307.2px;position:absolute;top:0;width:307.2px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-30"
              data-rowindex="1"
              style="height:35px;left:614.4px;position:absolute;top:0;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-30"
              data-rowindex="2"
              style="height:35px;left:0;position:absolute;top:35px;width:307.2px"
            >
              <em>
                Product engineer
              </em>
            </div>
            <div
              class="emotion-30"
              data-rowindex="2"
              style="height:35px;left:307.2px;position:absolute;top:35px;width:307.2px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-30"
              data-rowindex="2"
              style="height:35px;left:614.4px;position:absolute;top:35px;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

<div
    class="emotion-0"
  />,
]
`;

exports[`Table renders again with new data 1`] = `
.emotion-0 {
  font-weight: normal;
}

.emotion-0::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-2 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

<Table
  data={
    Array [
      1,
      2,
      3,
    ]
  }
>
  <AutoSizer
    __dataThatTriggersARerenderWhenChanged={
      Array [
        1,
        2,
        3,
      ]
    }
    className="emotion-0"
    defaultHeight={768}
    defaultWidth={1024}
    disableHeight={false}
    disableWidth={false}
    onResize={[Function]}
    style={Object {}}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    >
      <MultiGrid
        cellRangeRenderer={[Function]}
        cellRenderer={[Function]}
        classNameBottomLeftGrid="css-1oay0jc"
        classNameBottomRightGrid="css-1abf74x"
        classNameTopLeftGrid="css-4bzelf"
        classNameTopRightGrid="css-1n6cz8p"
        columnCount={1}
        columnWidth={[Function]}
        enableFixedColumnScroll={true}
        enableFixedRowScroll={true}
        fixedColumnCount={1}
        fixedRowCount={1}
        height={0}
        hideBottomLeftGridScrollbar={true}
        hideTopRightGridScrollbar={true}
        onScroll={[Function]}
        rowCount={4}
        rowHeight={35}
        scrollToColumn={-1}
        scrollToRow={-1}
        style={Object {}}
        styleBottomLeftGrid={Object {}}
        styleBottomRightGrid={Object {}}
        styleTopLeftGrid={Object {}}
        styleTopRightGrid={Object {}}
        width={0}
      />
    </div>
  </AutoSizer>
  <div
    className="emotion-2"
  />
</Table>
`;

exports[`Table renders again with new data 2`] = `
.emotion-0 {
  font-weight: normal;
}

.emotion-0::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-2 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

<Table
  data={
    Array [
      4,
      5,
      6,
    ]
  }
>
  <AutoSizer
    __dataThatTriggersARerenderWhenChanged={
      Array [
        4,
        5,
        6,
      ]
    }
    className="emotion-0"
    defaultHeight={768}
    defaultWidth={1024}
    disableHeight={false}
    disableWidth={false}
    onResize={[Function]}
    style={Object {}}
  >
    <div
      className="emotion-0"
      style={
        Object {
          "height": 0,
          "overflow": "visible",
          "width": 0,
        }
      }
    >
      <MultiGrid
        cellRangeRenderer={[Function]}
        cellRenderer={[Function]}
        classNameBottomLeftGrid="css-1oay0jc"
        classNameBottomRightGrid="css-1abf74x"
        classNameTopLeftGrid="css-4bzelf"
        classNameTopRightGrid="css-1n6cz8p"
        columnCount={1}
        columnWidth={[Function]}
        enableFixedColumnScroll={true}
        enableFixedRowScroll={true}
        fixedColumnCount={1}
        fixedRowCount={1}
        height={0}
        hideBottomLeftGridScrollbar={true}
        hideTopRightGridScrollbar={true}
        onScroll={[Function]}
        rowCount={4}
        rowHeight={35}
        scrollToColumn={-1}
        scrollToRow={-1}
        style={Object {}}
        styleBottomLeftGrid={Object {}}
        styleBottomRightGrid={Object {}}
        styleTopLeftGrid={Object {}}
        styleTopRightGrid={Object {}}
        width={0}
      />
    </div>
  </AutoSizer>
  <div
    className="emotion-2"
  />
</Table>
`;

exports[`Table renders default 1`] = `
Array [
  .emotion-28 {
  font-weight: normal;
}

.emotion-28::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-27 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-20 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-20::-webkit-scrollbar {
  display: none;
}

.emotion-17 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-17::-webkit-scrollbar {
  display: none;
}

.emotion-17 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-4 {
  overflow: unset !important;
}

.emotion-4 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-3 {
  box-sizing: border-box;
  border-top: 1px solid var(--themeBorderHeavy,#1B2029);
  border-bottom: 1px solid var(--themeBorderHeavy,#1B2029);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3:hover .staticClass_dragHandleWrapper,
.emotion-3:active .staticClass_dragHandleWrapper {
  visibility: visible;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  mix-blend-mode: multiply;
  position: relative;
  z-index: 1;
}

.emotion-18 {
  box-sizing: border-box;
  border-bottom: 1px solid var(--themeBorder,#DADDE2);
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
    class="emotion-28"
    style="overflow:visible;height:0;width:0"
  >
    <div
      style="height:768px;overflow:visible;width:1024px"
    >
      <div
        style="height:35px;position:relative;width:1024px"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-4"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:307.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:0;top:0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:307.2px;height:35px;max-width:307.2px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-3"
              style="height:35px;left:0;position:absolute;top:0;width:307.2px"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-0"
                >
                  name
                </div>
                <div
                  class="emotion-1"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TopRightGrid_ScrollWrapper"
          style="left:307.2px;overflow-x:hidden;overflow-y:hidden;position:absolute;top:0;height:35px;width:716.8px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-17"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:716.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:0;top:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:1021.5999999999999px;height:35px;max-width:1021.5999999999999px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-3"
                style="height:35px;left:0;position:absolute;top:0;width:307.2px"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-0"
                  >
                    role
                  </div>
                  <div
                    class="emotion-1"
                  />
                </div>
              </div>
              <div
                class="emotion-3"
                style="height:35px;left:307.2px;position:absolute;top:0;width:307.2px"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-0"
                  >
                    state
                  </div>
                  <div
                    class="emotion-1"
                  />
                </div>
              </div>
              <div
                class="emotion-3"
                style="height:35px;left:614.4px;position:absolute;top:0;width:307.2px"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-0"
                  >
                    zipcode
                  </div>
                  <div
                    class="emotion-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height:733px;overflow:visible;position:relative;width:1024px"
      >
        <div
          class="BottomLeftGrid_ScrollWrapper"
          style="left:0;overflow-x:hidden;overflow-y:hidden;position:absolute;height:733px;width:307.2px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-20"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:307.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto;left:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:307.2px;height:70px;max-width:307.2px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-18"
                data-rowindex="1"
                style="height:35px;left:0;position:absolute;top:0;width:307.2px"
              >
                <strong>
                  Brian Vaughn
                </strong>
              </div>
              <div
                class="emotion-18"
                data-rowindex="2"
                style="height:35px;left:0;position:absolute;top:35px;width:307.2px"
              >
                <strong>
                  Jon Doe
                </strong>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-27"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:716.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:307.2px"
          tabindex="0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:1021.5999999999999px;height:70px;max-width:1021.5999999999999px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-18"
              data-rowindex="1"
              style="height:35px;left:0;position:absolute;top:0;width:307.2px"
            >
              <em>
                Software Engineer
              </em>
            </div>
            <div
              class="emotion-18"
              data-rowindex="1"
              style="height:35px;left:307.2px;position:absolute;top:0;width:307.2px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-18"
              data-rowindex="1"
              style="height:35px;left:614.4px;position:absolute;top:0;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-18"
              data-rowindex="2"
              style="height:35px;left:0;position:absolute;top:35px;width:307.2px"
            >
              <em>
                Product engineer
              </em>
            </div>
            <div
              class="emotion-18"
              data-rowindex="2"
              style="height:35px;left:307.2px;position:absolute;top:35px;width:307.2px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-18"
              data-rowindex="2"
              style="height:35px;left:614.4px;position:absolute;top:35px;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

<div
    class="emotion-0"
  />,
]
`;

exports[`Table renders with growToFill cols 1`] = `
Array [
  .emotion-34 {
  font-weight: normal;
}

.emotion-34::after {
  content: "";
  height: 100%;
  left: 0;
  position: absolute;
  pointer-events: none;
  top: 0;
  width: 100%;
}

.emotion-33 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-24 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-24::-webkit-scrollbar {
  display: none;
}

.emotion-21 {
  -ms-overflow-style: -ms-autohiding-scrollbar;
}

.emotion-21::-webkit-scrollbar {
  display: none;
}

.emotion-21 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-4 {
  overflow: unset !important;
}

.emotion-4 .ReactVirtualized__Grid__innerScrollContainer {
  overflow: unset !important;
}

.emotion-3 {
  box-sizing: border-box;
  border-top: 1px solid var(--themeBorderHeavy,#1B2029);
  border-bottom: 1px solid var(--themeBorderHeavy,#1B2029);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3:hover .staticClass_dragHandleWrapper,
.emotion-3:active .staticClass_dragHandleWrapper {
  visibility: visible;
}

.emotion-2 {
  -webkit-align-items: flex;
  -webkit-box-align: flex;
  -ms-flex-align: flex;
  align-items: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
}

.emotion-1 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  mix-blend-mode: multiply;
  position: relative;
  z-index: 1;
}

.emotion-22 {
  box-sizing: border-box;
  border-bottom: 1px solid var(--themeBorder,#DADDE2);
  white-space: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
    class="emotion-34"
    style="overflow:visible;height:0;width:0"
  >
    <div
      style="height:768px;overflow:visible;width:1024px"
    >
      <div
        style="height:35px;position:relative;width:1024px"
      >
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-4"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:204.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:hidden;left:0;top:0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:204.8px;height:35px;max-width:204.8px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-3"
              style="height:35px;left:0;position:absolute;top:0;width:204.8px"
            >
              <div
                class="emotion-2"
              >
                <div
                  class="emotion-0"
                >
                  name
                </div>
                <div
                  class="emotion-1"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TopRightGrid_ScrollWrapper"
          style="left:204.8px;overflow-x:hidden;overflow-y:hidden;position:absolute;top:0;height:35px;width:819.2px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-21"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:35px;position:absolute;width:819.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:0;top:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:1024px;height:35px;max-width:1024px;max-height:35px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-3"
                style="height:35px;left:0;position:absolute;top:0;width:204.8px"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-0"
                  >
                    role
                  </div>
                  <div
                    class="emotion-1"
                  />
                </div>
              </div>
              <div
                class="emotion-3"
                style="height:35px;left:204.8px;position:absolute;top:0;width:204.8px"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-0"
                  >
                    state
                  </div>
                  <div
                    class="emotion-1"
                  />
                </div>
              </div>
              <div
                class="emotion-3"
                style="height:35px;left:409.6px;position:absolute;top:0;width:307.2px"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-0"
                  >
                    zipcode
                  </div>
                  <div
                    class="emotion-1"
                  />
                </div>
              </div>
              <div
                class="emotion-3"
                style="height:35px;left:716.8px;position:absolute;top:0;width:307.2px"
              >
                <div
                  class="emotion-2"
                >
                  <div
                    class="emotion-0"
                  >
                    city
                  </div>
                  <div
                    class="emotion-1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height:733px;overflow:visible;position:relative;width:1024px"
      >
        <div
          class="BottomLeftGrid_ScrollWrapper"
          style="left:0;overflow-x:hidden;overflow-y:hidden;position:absolute;height:733px;width:204.8px"
        >
          <div
            aria-label="grid"
            aria-readonly="true"
            class="ReactVirtualized__Grid emotion-24"
            role="grid"
            style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:204.8px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:hidden;overflow-y:auto;left:0"
          >
            <div
              class="ReactVirtualized__Grid__innerScrollContainer"
              role="rowgroup"
              style="width:204.8px;height:70px;max-width:204.8px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
            >
              <div
                class="emotion-22"
                data-rowindex="1"
                style="height:35px;left:0;position:absolute;top:0;width:204.8px"
              >
                <strong>
                  Brian Vaughn
                </strong>
              </div>
              <div
                class="emotion-22"
                data-rowindex="2"
                style="height:35px;left:0;position:absolute;top:35px;width:204.8px"
              >
                <strong>
                  Jon Doe
                </strong>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          aria-readonly="true"
          class="ReactVirtualized__Grid emotion-33"
          role="grid"
          style="box-sizing:border-box;direction:ltr;height:733px;position:absolute;width:819.2px;-webkit-overflow-scrolling:touch;will-change:transform;overflow-x:auto;overflow-y:hidden;left:204.8px"
          tabindex="0"
        >
          <div
            class="ReactVirtualized__Grid__innerScrollContainer"
            role="rowgroup"
            style="width:1024px;height:70px;max-width:1024px;max-height:70px;overflow:hidden;pointer-events:;position:relative"
          >
            <div
              class="emotion-22"
              data-rowindex="1"
              style="height:35px;left:0;position:absolute;top:0;width:204.8px"
            >
              <em>
                Software Engineer
              </em>
            </div>
            <div
              class="emotion-22"
              data-rowindex="1"
              style="height:35px;left:204.8px;position:absolute;top:0;width:204.8px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-22"
              data-rowindex="1"
              style="height:35px;left:409.6px;position:absolute;top:0;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-22"
              data-rowindex="1"
              style="height:35px;left:716.8px;position:absolute;top:0;width:307.2px"
            >
              <strong>
                San Jose
              </strong>
            </div>
            <div
              class="emotion-22"
              data-rowindex="2"
              style="height:35px;left:0;position:absolute;top:35px;width:204.8px"
            >
              <em>
                Product engineer
              </em>
            </div>
            <div
              class="emotion-22"
              data-rowindex="2"
              style="height:35px;left:204.8px;position:absolute;top:35px;width:204.8px"
            >
              <span>
                CA
              </span>
            </div>
            <div
              class="emotion-22"
              data-rowindex="2"
              style="height:35px;left:409.6px;position:absolute;top:35px;width:307.2px"
            >
              <span>
                95125
              </span>
            </div>
            <div
              class="emotion-22"
              data-rowindex="2"
              style="height:35px;left:716.8px;position:absolute;top:35px;width:307.2px"
            >
              <strong>
                Mountain View
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  .emotion-0 {
  height: 100px;
  overflow: scroll;
  msoverflowstyle: scrollbar;
  opacity: 0;
  position: absolute;
  top: -100000px;
  visibility: hidden;
  width: 100px;
}

<div
    class="emotion-0"
  />,
]
`;
